--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,11 @@
 name=MS5x
 version=1.0.0
-author=Matthew Bennett <lifewithmatthew@yahoo.com>
-maintainer=Matthew Bennett <lifewithmatthew@yahoo.com>
-sentence=Library for digital pressure sensors MS5xxx by Measurement Specialties (MEAS).
-paragraph=Tested with Arduino Uno/Nano/Mico, ESP8266, and ESP32. Long-term tests with MS5611.
-category=Sensors
+author=LifeWithMatthew
+maintainer=LifeWithMatthew <lifewithmatthew@yahoo.com>
+sentence=Library for digital pressure sensors MS5xxx by Measurement Specialties (MEAS)
+paragraph=This library allows for the communication with MS5xxx pressure sensors.  Such as the MS5607, MS5611, MS58xx, and MS57xx sensors.
+category=sensors
 url=https://github.com/abishur/arduino-ms5x
 architectures=*
-
+licence=GPL-2.0 License
+includes=MS5x.h
